    will tell Blat to continue with the process of sending the email even if
    the requested attachment filename cannot be found.  Blat will still log a
    message that the requested filename was not found, but Blat will not stop
    when this option is used.  This request came through SourceForge from
    Robert Widdicombe.
[-] Correctly handle empty Unicode files that contain only the BOM.
[-] Corrected the help text for IMAP UserID and IMAP Password.
-------------------------------------------------------------------------------
3.2.11
[-] Alain Loubert found a problem with processing a plain text file for the
    message body, resulting in a UTF-8 byte order marker (BOM) being sent as
    part of the message.  I fixed this oversight and added more test cases to
    my validation batch file.
-------------------------------------------------------------------------------
3.2.10
[-] R Massey found a problem with processing a subject file that resulted in
    garbled subject text.  This was exposed as a problem with the most recent
    changes, but there was a latent bug in the source code for a while which
    actually caused problems for R Massey.
-------------------------------------------------------------------------------
3.2.9
[*] If the message body is from keyboard input, and if the user enters Ctrl-Z
    without anything else before it, then a carriage return / line feed will be
    the message body.  This forces the program to add attachments properly.
[-] Checking the message body for Unicode was causing every other character to
    be lost.  This should be fixed now.  At the same time, Unicode files
    without a Byte Order Marker (BOM) should be properly handled.  Version
    3.2.6 was an attempt to fix this last piece, but it broke non-Unicode file
    handling.
-------------------------------------------------------------------------------
3.2.8
[-] When impersonating (-f option) and the message content is formatted, it was